python/testData/inspections/PyUnresolvedReferencesInspection/FromPackageImportBuiltin/a.py
from importSource import <error descr="Cannot find reference 'len' in 'importSource'">len</error>

len()
